--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "express-ejs-layouts": "^2.5.0",
+    "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
-    "if-env": "^1.0.4"
+    "passport": "^0.4.1"
   }
 }
