--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-ejs-layouts": "^2.5.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
