--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
-    
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +29,7 @@
     "mongoose": "^5.3.16",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "react-masonry-css": "^1.0.14"
+    "react-masonry-css": "^1.0.14",
+    "unsplash-js": "^7.0.2"
   }
 }
